# bevy_pathfinding

./: Cargo.toml  Changelog.md  markdown.md  readme.md  todo.md
assets/: arrow.wgsl
assets/shaders/: instancing.wgsl
examples/: basic.rs  stress_test.rs  stress_test2.rs
src/: boids.rs  cell.rs  components.rs  debug.rs  events.rs  flowfield.rs  grid.rs  grid_controller.rs  grid_direction.rs  lib.rs  resources.rs  rvo.rs  utils.rs
src/debug/: components.rs  draw.rs  events.rs  instancing.wgsl  instancing3.wgsl  mod.rs  resources.rs  shader.rs  t.rs  t2.rs  ui.rs
src/debug_plugin/: mod.rs
