[package]
name = "bevy_pathfinding"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.16", default-features = false, features = [
    "bevy_asset",
    "bevy_gizmos",
    "bevy_pbr",
    "bevy_render",
    "bevy_ui",
    "bevy_window",
    "bevy_winit"
] }
bytemuck = "1.21.0"
image = "0.25.5"

[dev-dependencies]
bevy = "0.16"

[features]
debug = []