[package]
name = "bevy_pathfinding"
version = "0.1.0"
edition = "2021"
description = "A simple 3D Bevy plugin that combines flowfield pathfinding with boid-based collision avoidance to move units smoothly. Great for RTS games!"
keywords = ["bevy", "pathfinding", "rts"]
categories = ["game-development"]
repository = "https://github.com/The-DevBlog/bevy_pathfinding"
homepage = "https://github.com/The-DevBlog/bevy_pathfinding"
readme = "README.md"

exclude = [
  "assets/debug*",
  "assets/demo*",
  ".vscode/**",
]

[dependencies]
bevy = { version = "0.16.0", default-features = false, features = [
    "bevy_asset",
    "bevy_gizmos",
    "bevy_pbr",
    "bevy_render",
    "bevy_ui",
    "bevy_window",
    "bevy_winit"
] }
bytemuck = "1.21.0"
image = "0.25.5"

[dev-dependencies]
bevy = "0.16.0"

[features]
debug = []