[package]
name = "bevy_pathfinding"
version = "0.1.0"
edition = "2021"
description = "A simple 3D Bevy plugin that combines flowfield pathfinding with boid-based collision avoidance to move units smoothly. Great for RTS games!"
keywords = ["bevy", "pathfinding", "rts"]
categories = ["game-development"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/The-DevBlog/bevy_pathfinding"
homepage = "https://github.com/The-DevBlog/bevy_pathfinding"
readme = "README.md"

exclude = [
  "assets/debug*",
  "assets/demo*",
  ".vscode/**",
]

[dependencies]
bevy = { version = "0.16.0", default-features = false, features = [
    "bevy_asset",
    "bevy_gizmos",
    "bevy_pbr",
    "bevy_render",
    "bevy_ui",
    "bevy_window",
    "bevy_winit"
] }
bytemuck = "1.21.0"
dodgy_3d = "0.5.2"
glam = "0.29.1"
image = "0.25.5"
rand = "0.9.1"

[dev-dependencies]
bevy_rts_camera = "0.10.0"
bevy = "0.16.0"

[features]
debug = []
